--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
-# DATASOURCE 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password= 
+server.port=${port:8081}
 
-# H2 CLIENT 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.profiles.active=test
 
-# JPA, SQL 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=true
+
 
